# bysykkel-demo

./: .gitignore  README.md  app.py  index.html  package-lock.json  package.json  pyproject.toml  records.py  tsconfig.app.json
src/: App.tsx
