[tool.poetry]
name = "bysykkel-demo"
version = "0.1.0"
description = ""
authors = ["Petter Hohle"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pydantic = "^2.9.2"
requests = "^2.32.3"
redis = {extras = ["hiredis"], version = "^5.0.8"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
